configs/VMs/fedora42-httpd-multicloud/my-testvm-multicloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-testvm-multicloud-service
  namespace: my-testvm-multicloud
spec:
  selector:
    expose: my-testvm-multicloud
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
