configs/VMs/fedora42-httpd-multicloud/my-testvm-multicloud-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-testvm-multicloud-route
spec:
  to:
    kind: Service
    name: my-testvm-multicloud-service
  port:
    targetPort: 8080
  tls:
    termination: edge
